force-app/src/objects/c2g__codaFormatData__c.object
<CustomObject>
    <description>Stores a part of the formats saved from Certinia Print Formatter.</description>
    <fields>
        <fullName>c2g__AppendOnly__c</fullName>
        <label>AppendOnly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>com_append_only_round_sum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__BackgroundColour__c</fullName>
        <label>BackgroundColour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BorderBottom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BorderBottom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__BorderColour__c</fullName>
        <label>BorderColour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BorderLeft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BorderLeft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__BorderRight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BorderRight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__BorderStyle__c</fullName>
        <label>BorderStyle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>com_line_solid</fullName>
                </value>
                <value>
                    <fullName>com_line_dotted</fullName>
                </value>
                <value>
                    <fullName>com_line_dashed</fullName>
                </value>
                <value>
                    <fullName>com_line_double</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__BorderTop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BorderTop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__BorderWeight__c</fullName>
        <label>BorderWeight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>com_line_weight_thin</fullName>
                </value>
                <value>
                    <fullName>com_line_weight_normal</fullName>
                </value>
                <value>
                    <fullName>com_line_weight_thick</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__DateTimeFormat__c</fullName>
        <label>DateTimeFormat</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DecimalsAsDigits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decimals As Digits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DisplayAsWords__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DisplayAsWords</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__FontBold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FontBold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__FontColour__c</fullName>
        <label>FontColour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__FontFamily__c</fullName>
        <label>FontFamily</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__FontItalic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FontItalic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__FontSize__c</fullName>
        <label>FontSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__FontStrikethrough__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FontStrikethrough</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__FontUnderline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FontUnderline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__HAlign__c</fullName>
        <label>HAlign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>com_halign_left</fullName>
                </value>
                <value>
                    <fullName>com_halign_centre</fullName>
                </value>
                <value>
                    <fullName>com_halign_right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__LineSpacing__c</fullName>
        <label>LineSpacing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NegativeColour__c</fullName>
        <label>NegativeColour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NumberFormat__c</fullName>
        <label>NumberFormat</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Padding__c</fullName>
        <label>Padding</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VAlign__c</fullName>
        <label>VAlign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>com_valign_top</fullName>
                </value>
                <value>
                    <fullName>com_valign_middle</fullName>
                </value>
                <value>
                    <fullName>com_valign_botton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Format Data</label>
    <nameField>
        <label>Format Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Format Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>